Fix spacing on pages when clicking links, replace sample code with database entries, and clean up layout

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -161,7 +161,7 @@ $darkBlue: #020031;
 /* Pages */
 
 section {
-  margin-top: 20px;
+  padding-top: 50px;
 
   .row {
     margin-bottom: 20px;
